# LightwatchAI2

./: .gitignore  .lightwatch_state.json  CLAUDE.md  CMakeLists.txt  README.md
cmake/: LightwatchCompilerFlags.cmake
configs/: gpt2-small.json
docs/: Master Prompt.md
docs/architecture/: DECISIONS.md  ESCALATIONS.md  PLATFORM_SUPPORT.md  PROMPT_AUDIT.md  TOOLCHAIN.md
docs/contracts/: autograd.hpp.spec  cli.md  module.hpp  serialization.md  tensor.hpp.spec  tokenizer.hpp.spec
docs/prompts/: phase-01-build-system.md  phase-02-memory-management.md  phase-03-tensor-core.md  phase-04-simd-operations.md  phase-05-autograd-engine.md  phase-06-bpe-tokenizer.md  phase-07-vocabulary.md  phase-08-embedding-layer.md  phase-09-positional-encoding.md  phase-10-foundation-tests.md  phase-11-dense-layer.md  phase-12-activations.md  phase-13-layer-normalization.md  phase-14-dropout.md  phase-15-single-head-attention.md  phase-16-multi-head-attention.md  phase-17-ffn-block.md  phase-18-transformer-encoder.md  phase-19-transformer-decoder.md  phase-20-neural-core-tests.md  phase-21-loss-functions.md  phase-22-sgd-optimizer.md  phase-23-adam-optimizer.md  phase-24-lr-schedulers.md  phase-25-gradient-clipping.md  phase-26-checkpointing.md  phase-27-data-loading.md  phase-28-batch-processing.md  phase-29-training-loop.md  phase-30-training-tests.md  phase-31-gpt-architecture.md  phase-32-model-config.md  phase-33-weight-init.md  phase-34-greedy-decode.md  phase-35-sampling.md  phase-36-kv-cache.md  phase-37-serialization.md  phase-38-cli-repl.md  phase-39-profiling.md  phase-40-final-integration.md
docs/references/: README.md
docs/references/contracts/: optimizer.hpp.spec
docs/references/examples/: benchmark_loop.cpp  commit_messages.md  decision_entry.md  smoke_test.cpp
docs/references/schemas/: cli_output.schema.json  state_file.schema.json
docs/references/scripts/: acquire_assets.sh  check_toolchain.sh  checkpoint_10.sh  checkpoint_20.sh  checkpoint_30.sh  push_with_retry.sh  session_recovery.sh
docs/references/templates/: CLAUDE.md.template  CMakeLists.txt.template  DECISIONS.md.template  gitignore.template  lightwatch_state.json.template  phase_prompt.md.template
docs/references/test_specs/: phase-03-tensor.md  phase-04-simd.md  phase-05-autograd.md  phase-06-tokenizer.md  phase-15-attention.md  phase-16-mha.md  phase-19-decoder.md  phase-29-training.md  phase-31-gpt.md  phase-36-kvcache.md  phase-38-cli.md
docs/test_specs/: README.md  phase-03-tensor.md  phase-04-simd.md  phase-05-autograd.md  phase-06-tokenizer.md  phase-15-attention.md  phase-16-mha.md  phase-19-decoder.md  phase-29-training.md  phase-31-gpt.md  phase-36-kvcache.md  phase-38-cli.md
include/lightwatch/: autograd.hpp  cache.hpp  checkpoint.hpp  cli.hpp  config.hpp  generate.hpp  init.hpp  model_config.hpp  profiler.hpp  serialize.hpp  tensor.hpp
include/lightwatch/data/: collate.hpp  dataloader.hpp  dataset.hpp
include/lightwatch/memory/: aligned.hpp  arena.hpp  pool.hpp
include/lightwatch/models/: gpt.hpp
include/lightwatch/nn/: activations.hpp  attention.hpp  dropout.hpp  embedding.hpp  ffn.hpp  linear.hpp  loss.hpp  module.hpp  normalization.hpp  positional.hpp  transformer.hpp
include/lightwatch/optim/: adam.hpp  clip.hpp  optimizer.hpp  scheduler.hpp  sgd.hpp
include/lightwatch/simd/: avx2.hpp  dispatch.hpp  scalar.hpp  sse.hpp
include/lightwatch/tokenizer/: bpe.hpp  vocabulary.hpp
include/lightwatch/training/: trainer.hpp
scripts/: acquire_assets.sh  check_toolchain.sh  convert_hf_to_lwbin.py  convert_lwbin_to_hf.py  validate_prompts.py  validate_prompts.py.template  verify_complete.sh  verify_complete.sh.template
src/: main.cpp
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  test_foundation.cpp  test_neural_core.cpp  test_training.cpp
tests/smoke/: CMakeLists.txt  smoke_test.cpp
tests/unit/: CMakeLists.txt  test_activations.cpp  test_adam.cpp  test_attention.cpp  test_autograd.cpp  test_cache.cpp  test_checkpoint.cpp  test_cli.cpp  test_clip.cpp  test_collate.cpp  test_config.cpp  test_dataloader.cpp  test_decoder.cpp  test_dropout.cpp  test_embedding.cpp  test_ffn.cpp  test_generate.cpp  test_gpt.cpp  test_init.cpp  test_linear.cpp  test_loss.cpp  test_memory.cpp  test_mha.cpp  test_model_config.cpp  test_normalization.cpp  test_positional.cpp  test_profiler.cpp  test_sampling.cpp  test_scheduler.cpp  test_serialize.cpp  test_sgd.cpp  test_simd.cpp  test_tensor.cpp  test_tokenizer.cpp  test_trainer.cpp  test_transformer.cpp  test_vocabulary.cpp
