# LightwatchAI2 Test Suite
# Tests are organized by type: unit, integration, smoke, benchmarks

# Unit tests (added by implementation phases)
# add_subdirectory(unit)

# Integration tests (added by checkpoint phases)
# add_subdirectory(integration)

# Smoke tests (Phase 0.9)
add_subdirectory(smoke)

# Benchmarks (Phase 39)
# add_subdirectory(benchmarks)
